@@ -1,3 +1,8 @@
+2003-04-12  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
+	* dsextras.py: 
+	* setup.py.in: Win32 build fix.
+
 2003-04-04  Alif Wahid	<awah005@users.sourceforge.net>
 
 	Fixed bug in the font.py example program, however
